<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhereIsMyMoney</string>
    <string name="description">Your accounts</string>
    <string name="sum">Sum</string>
    <string name="place">Place</string>
    <string name="save">Save</string>
    <string name="add">Add Transaction</string>
    <string name="unknown_place">Unknown place</string>
    <string name="reportByPlace">by Place</string>
    <string name="reportByCards">by Cards</string>
    <string name="makeReport">Generate report</string>
    <string name="balance">Balance</string>
    <string name="date_format">dd.MM.yyyy HH:mm</string>
    <string name="totalCosts">Total</string>
    <string name="startDate">Start date:</string>
    <string name="endDate">End date:</string>
    <string name="transaction_list_header">Transactions of</string>
    <string name="transaction_list_header_for_cash">Cash transactions</string>
    <string name="add_transaction_header">Add cash transaction</string>
    <string name="costs_report_setup_header">Generate expenses report</string>
    <string name="costs_report">Expenses report</string>
    <string name="sms">SMS example</string>
    <string name="parse_sms">Parse SMS example</string>
    <string name="special_word">Special word</string>
    <string name="choose_sms">Choose SMS to parse</string>
    <string name="cash_account">Cash</string>
    <string name="add_parser">Add parser</string>
    <string name="drop_parsers">Drop parsers</string>
    <string name="refresh_history">Refresh</string>
    <string name="change">Mark</string>
    <string name="balance_change">Change of balance</string>
    <string name="transactions_for_place">for place</string>
    <string name="transactions_deposit">Deposit</string>
    <string name="transactions_withdraw">Withdraw</string>
    <string name="transactions_all">All</string>
    <string name="cancel">Cancel</string>
    <string-array name="field_name">
        <item>Card</item>
        <item>Place</item>
        <item>Delta</item>
        <item>Balance</item>
        <item>Date</item>
    </string-array>
    <string-array name="type_name">
        <item>Withdraw</item>
        <item>Deposit</item>
        <item>Not changed</item>
    </string-array>
</resources>
