<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout style="@style/HeaderLinearLayout">
        <TextView
            style="@style/HeaderTextView"
            android:text="@string/costs_report_setup_header"/>
    </LinearLayout>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDate"
            android:id="@+id/textView1" android:layout_gravity="left|center_vertical"/>
    <DatePicker
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startDate"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:id="@+id/textView"/>
    <DatePicker
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endDate"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="bottom">
        <Button
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/reportByPlace"
                android:id="@+id/showReportByPlaces" android:layout_weight="1"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportByCards"
                android:id="@+id/showReportByCards" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>