<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout style="@style/HeaderLinearLayout">
        <TextView
                style="@style/HeaderTextView"
                android:text="@string/parse_sms"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:padding="5dp">

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/sms"/>

        <EditText android:id="@+id/sms"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textMultiLine"
        />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/special_word"/>
        <RelativeLayout android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
            <Spinner
                    android:id="@+id/field"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">
            </Spinner>
            <Button android:id="@+id/change"
                    android:layout_toRightOf="@id/field"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:onClick="changeType"
                    android:background="@drawable/nice_button"
                    style="@style/ShadowedText"/>
        </RelativeLayout>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/balance_change"/>
        <Spinner
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
        </Spinner>

        <Button android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:onClick="saveParser"
                android:background="@drawable/nice_button"
                style="@style/ShadowedText"/>

    </LinearLayout>
</LinearLayout>