<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout style="@style/HeaderLinearLayout">
        <TextView
            style="@style/HeaderTextView"
            android:text="@string/add_transaction_header"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:padding="20dp"
            >

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/sum"
            />

    <EditText android:id="@+id/delta"
              android:inputType="numberSigned"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" />

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/place" />

    <EditText android:id="@+id/place"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" />

    <Button android:id="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="saveTransaction"
            android:background="@drawable/nice_button"
            style="@style/ShadowedText"
            />

       </LinearLayout>

</LinearLayout>
